# ruleenginex

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  requirements copy.txt  requirements.txt
.github/workflows/: ci_cd.yaml
src/ruleenginex/: constants.py  exceptions.py  operatorx.py  rule.py  rules.py  scenario.py
tests/: test_constants.py  test_exceptions.py  test_operator.py  test_operator_complex.py  test_rule.py  test_rule_complex.py  test_rules.py  test_rules_complex.py  test_scenario.py  test_scenario_complex.py
